--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@angular/router": "^17.3.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
+    "angular-highcharts": "^17.0.1",
+    "chart.js": "^4.4.2",
+    "highcharts": "^11.4.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
